<resources>
    <string name="app_name">CLE</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inicio">Inicio</string>

    <string name="home">Home</string>
    <string name="encuestas">Mis Encuestas</string>
    <string name="evaluadores">Mis Evaluadores</string>
    <string name="mision">Misión</string>
    <string name="organica">Organica</string>
    <string name="doctrina">Doctrina</string>
    <string name="cursos">Cursos</string>
    <string name="mis_datos">Mis Datos</string>
    <string name="herramientas">Herramientas</string>
    <string name="acerca_de">Acerca de</string>
    <string name="salir">Salir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">TEXTO DE PRUEBA!</string>
    <string name="title_activity_encuesta">Encuesta</string>
    <string name="title_activity_documentos_pager">DocumentosPager</string>
    <string name="title_activity_noticia_detalle">Noticias CLE</string>
    <string name="configuracion">Configuración</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_buscador_evaluadores">Buscador de Evaluadores</string>
</resources>
